[package]
description = "Parser for the SMB protocol"
license = "GPL-2.0"
keywords = ["SMB", "protocol","parser","nom"]
#homepage = "https://github.com/inliniac/quic-parser"
#repository = "https://github.com/inliniac/quic-parser.git"
name = "suricata-smb"
version = "0.0.1"
authors = ["Victor Julien <victor@inliniac.net>"]

[dependencies]
libc = "0.2.0"
nom = "^2.0"
#byteorder = "1.0.0"
