[package]
name = "suricata-rs"
version = "0.1.0"
description = "Suricata Rust parsers library"
license = "GPL-2+"
keywords = ["Suricata","pcap","protocol","parser","nom","IDS"]
# homepage = "https://github.com/rusticata/pcap-parse"
# repository = "https://github.com/rusticata/pcap-parse.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.0"
lazy_static = "0.1.*"
log = "*"
env_logger = "*"

[dependencies.suricata-interface]
path = "../suricata-interface"

[dependencies.suricata-dns]
path = "../dns"

[dependencies.suricata-nfs3]
path = "../nfs/nfs3tcp"

[dependencies.suricata-quic]
path = "../quic"

[dependencies.suricata-smb]
path = "../smb"

